syntax = "proto3";

import "Common.proto";

package wealth;

option csharp_namespace = "Wealth.InstrumentManagement";

service InstrumentsService {
  rpc GetInstrument (GetInstrumentRequest) returns (InstrumentProto);
}

message GetInstrumentRequest {
  InstrumentIdProto id = 1;
}

message InstrumentProto {
  InstrumentIdProto id = 1;
  string name = 2;
  MoneyProto price = 3;
  oneof type {
    StockInstrumentProto stock_info = 5;
    BondInstrumentProto bond_info = 6;
  }
}

message StockInstrumentProto {
  int32 lot_size = 4;
  MoneyProto dividend_per_year = 5;
}

message BondInstrumentProto {
}

