syntax = "proto3";

package wealth;

option csharp_namespace = "Wealth.BuildingBlocks";

message GuidProto {
  string value = 1;
}

message MoneyProto {
  CurrencyIdProto currency_id = 1;
  DecimalProto amount = 2;
}

message CurrencyIdProto {
  string code = 1;
}

message DecimalProto {
  int64 units = 1;
  sfixed32 nanos = 2;
}

message ISINProto {
  string value = 1;
}

enum InstrumentTypeProto {
  InstrumentTypeProto_STOCK = 0;
  InstrumentTypeProto_BOND = 1;
}

message PortfolioIdProto {
  int32 id = 1;
}

message BondIdProto {
  int32 id = 1;
}

message StockIdProto {
  int32 id = 1;
}

message DepositIdProto {
  int32 id = 1;
}

message WalletIdProto {
  int32 id = 1;
}